docs: add some basic skills

--- a/LeetCode/二分查找.md
+++ b/LeetCode/二分查找.md
@@ -1,25 +1,72 @@
+### 二分查找思想
+
+1. 取已排列好数组的中间值
+2. 把需查找的值和中间值进行比较
+3. 如果比中间值小，则对前半部分进行类似操作；如果比中间值大，则对后半部分进行类似操作；
+
+### 如何求二分查找的时间复杂度
+
+假设数据总量为 N, 因为二分查找每次会减少一半的数据，
+所以经过 1 次后, 数据剩下为 N / 2,
+经过 2 次后，数据剩下为 N / 2^2,
+二分查找的极限是最后剩下 1 个数据，假设经过 m 次后，达到极限, N / 2^m = 1, 即 2^m = N
+
+所以时间复杂度为 logN；
+
+> 题目：题目：现在我有一个 1~1000 区间中的正整数，需要你猜下这个数字是几，你只能问一个问题：大了还是小了？问需要猜几次才能猜对？
+
+答：根据二分查找的时间复杂度为 logN，所以题目可以转化为求 log1000 的值，2^10 = 1024，所以最多猜 10 次就能猜对；
+
+### 二分查找代码实现
+
 ```js
 // arr 为指定数组，target 为目标元素
-  function binarysearch(arr, target) {
-    let left = 0
-    let right = arr.length - 1
-    while (left <= right) {
-      const middlePoint = Math.floor((left + right) / 2)
-      let middle = arr[middlePoint]
-      if (middle > target) {
-        right = middlePoint - 1
-      } else if (middle < target) {
-        left = middlePoint + 1
-      } else {
-        return middle
-      }
+function binarysearch(arr, target) {
+  let left = 0
+  let right = arr.length - 1
+  while (left <= right) {
+    const middlePoint = Math.floor((left + right) / 2)
+    let middle = arr[middlePoint]
+    if (middle > target) {
+      right = middlePoint - 1
+    } else if (middle < target) {
+      left = middlePoint + 1
+    } else {
+      return middle
     }
-
-    return '数组中目标元素不存在'
   }
+
+  return '数组中目标元素不存在'
+}
 ```
 
-### 求开方
+> 题目：题目：在一个二维数组中，每一行都按照从左到右递增的顺序排序，每一列都按照从上到下递增的顺序排序。请完成一个函数，输入这样的一个二维数组和一个整数，判断数组中是否含有该整数。
+
+```js
+1  2  3  4
+5  6  7  8
+9  10 11 12
+13 14 15 16
+
+function find(arr, n) {
+  let x = 0
+  let y = arr[x].length - 1
+  while (x < arr.length && y > 0) {
+    if (n > arr[x][y]) {
+      x++
+    } else if (n < arr[x][y]) {
+      y--
+    } else {
+      return '找到目标元素'
+    }
+  }
+  return '目标元素不存在'
+}
+```
+
+这道题严格不算是二分查找，不过用到了类似的思维。
+
+> 求开方
 
 [Leetcode : 69. Sqrt(x) (Easy)](https://leetcode.com/problems/sqrtx/description/)
 
@@ -47,7 +94,7 @@ var mySqrt = function(x) { // 8
 }
 ```
 
-### 有序数组的 Single Element
+> 有序数组的 Single Element
 
 [Leetcode : 540. Single Element in a Sorted Array (Medium)](https://leetcode.com/problems/single-element-in-a-sorted-array/description/)
 
