--- a/LeetCode/正则匹配解题.md
+++ b/LeetCode/正则匹配解题.md
@@ -43,10 +43,19 @@ console.log(reg.test(str))
 console.log(reg.test(str))
 ```
 
-// true true false
-// 解答：reg 执行完 test 会发生改变，观察如下：
 ```js
+true
+true
+false
+```
+
+```js
+解答：reg 执行完 test 会发生改变，观察如下：
 console.log(reg.test(str), reg.lastIndex) // true  2
 console.log(reg.test(str), reg.lastIndex) // true  3
 console.log(reg.test(str), reg.lastIndex) // false 0
 ```
+
+如何解决？
+
+尝试用闭包没有解决, 有坑
