docs: 笔记系列 —— Node.js 源码是如何执行的

--- a/Basic Skill/设计模式/代理模式.md
+++ b/Basic Skill/设计模式/代理模式.md
@@ -70,4 +70,4 @@ proxyMult(1, 2, 3, 4) // 24
 
 ### 小 tip
 
-在开发时候不一定要一步到位，由于代理对象和本体对象具有相同的接口，可以在后期进行优化。
+在开发时候不要先去猜测是否需要使用代理模式，如果发现直接使用某个对象不方便时，再来优化不迟。
