docs: JavaScript 中常见设计模式整理

--- a/Basic Skill/设计模式/中介者模式.md
+++ b/Basic Skill/设计模式/中介者模式.md
@@ -6,7 +6,7 @@
 
 ### 场景 demo
 
-假设一场测试中，在参赛人数都答题完后，解答出题目的人挑战成功，否则挑战失败。
+一场测试结束后，公布结果：告知解答出题目的人挑战成功，否则挑战失败。
 
 ```js
 const player = function(name) {
