--- a/Basic Skill/设计模式/命令模式.md
+++ b/Basic Skill/设计模式/命令模式.md
@@ -2,11 +2,11 @@
 
 命令模式与[策略模式](https://github.com/MuYunyun/blog/blob/master/Basic%20Skill/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/%E7%AD%96%E7%95%A5%E6%A8%A1%E5%BC%8F.md)有些类似，在 JavaScript 中它们都是隐式的。
 
-重要性：2 星
+重要性：较低
 
 ### JavaScript 中的命令模式
 
-命令模式在 JavaScript 中也比较简单，下面代码中对`命令`和`按钮`进行了抽离
+命令模式在 JavaScript 中也比较简单，下面代码中对`按钮`和`命令`进行了抽离，因此可以复杂项目中可以使用命令模式将界面的代码和功能的代码交付给不同的人去写。
 
 ```js
 const setCommand = function(button, command) {
@@ -14,6 +14,8 @@ const setCommand = function(button, command) {
     command.excute()
   }
 }
+
+// --------------------  上面的界面逻辑由A完成，下面的由B完成
 
 const menu = {
   updateMenu: function() {
