--- a/Basic Skill/设计模式/适配者模式.md
+++ b/Basic Skill/设计模式/适配者模式.md
@@ -28,7 +28,7 @@ console.log(getZhejiangCityOld())
 }
 
 // 这时候就可采用适配者模式
-const const adaptor = (function(oldCity) {
+const adaptor = (function(oldCity) {
   const obj = {}
   for (let city of zhejiangCityOld) {
     obj[city.name] = city.id
