--- a/BasicSkill/从0到1实现React/1.JSX 和 虚拟 DOM.md
+++ b/BasicSkill/从0到1实现React/1.JSX 和 虚拟 DOM.md
@@ -75,6 +75,8 @@ console.log(element) // 打印结果符合预期
 我们知道在 React 中，将虚拟 DOM 转化为真实 DOM 是使用 `ReactDOM.render` 实现的，使用如下：
 
 ```js
+import ReactDOM from 'react-dom'
+
 ReactDOM.render(
   element, // 上文的 element，即虚拟 dom
   document.getElementById('root')
@@ -124,6 +126,7 @@ function setAttribute(dom, attr, value) {
     let standardCss
     for (let klass in value) {
       standardCss = humpToStandard(klass) // 处理驼峰样式为标准样式
+      value[klass] = _.isNumber(+value[klass]) ? value[klass] + 'px' : value[klass] // style={{ className: '20' || '20px' }}>
       styleStr += `${standardCss}: ${value[klass]};`
     }
     dom.setAttribute(attr, styleStr)
@@ -158,7 +161,7 @@ const ReactDOM = {
 
 如下是一个 react/preact 的常用组件的写法，那么为什么要 import 一个 React 或者 h 呢？
 
-```js
+```jsx
 import React, { Component } from 'react' // react
 // import { h, Component } from 'preact' // preact
 
