--- a/BasicSkill/从0到1实现React/1.JSX 和 虚拟 DOM.md
+++ b/BasicSkill/从0到1实现React/1.JSX 和 虚拟 DOM.md
@@ -96,8 +96,8 @@ const ReactDOM = {
  * @param {*} container 需要插入的位置
  */
 function render(vdom, container) {
-  if (typeof(vdom) === 'string') {
-    container.innerText = vdom
+  if (_.isString(vdom) || _.isNumber(vdom)) {
+    container.innerText = container.innerText + vdom // fix <div>I'm {this.props.name}</div>
     return
   }
   const dom = document.createElement(vdom.nodeName)
@@ -119,7 +119,7 @@ function setAttribute(dom, attr, value) {
     attr = 'class'
   }
   if (attr.match('/on\w+/')) {   // 处理事件的属性:
-    const eventName = attr.toLowerCase().splice(1)
+    const eventName = attr.toLowerCase().substr(2)
     dom.addEventListener(eventName, value)
   } else if (attr === 'style') { // 处理样式的属性:
     let styleStr = ''
