docs: react组件\props\state

--- a/BasicSkill/从0到1实现React/2.组件.md
+++ b/BasicSkill/从0到1实现React/2.组件.md
@@ -25,9 +25,9 @@ import React from 'react'
 
 // 写法 1：
 class A {
-	render() {
-		return <div>I'm componentA</div>
-	}
+  render() {
+    return <div>I'm componentA</div>
+  }
 }
 
 // 写法 2：无状态组件
@@ -57,7 +57,7 @@ React.createElement(A, null)
 
 ```js
 function render(vdom, container) {
-	if (_.isFunction(vdom.nodeName)) { // 如果 JSX 中是自定义组件
+  if (_.isFunction(vdom.nodeName)) { // 如果 JSX 中是自定义组件
     let component, returnVdom
     if (vdom.nodeName.prototype.render) {
       component = new vdom.nodeName()
@@ -75,15 +75,15 @@ function render(vdom, container) {
 
 ### props 和 state 的实现
 
-在上个小节组件 A 中，是没有引人任何属性和状态的，我们希望组件间能进行属性的传递(props)以及组件内能进行状态的记录(state)。
+在上个小节组件 A 中，是没有引入任何属性和状态的，我们希望组件间能进行属性的传递(props)以及组件内能进行状态的记录(state)。
 
 ```js
 import React, { Component } from 'react'
 
 class A extends Component {
-	render() {
-		return <div>I'm {this.props.name}</div>
-	}
+  render() {
+    return <div>I'm {this.props.name}</div>
+  }
 }
 
 ReactDOM.render(<A name="componentA" />, document.body)
@@ -110,13 +110,13 @@ function render(vdom, container) {
     } else {
       returnVdom = vdom.nodeName(vdom.attributes) 	// 处理无状态组件：const A = (props) => <div>I'm {props.name}</div>
     }
-		...
+    ...
   }
-	...
+  ...
 }
 ```
 
-实现完组件间 props 的传递后，再来聊聊 state，在 react 中是通过 setState 来完成组件状态的改变的，后续章节会对这个 api（异步）进行探究，这里简单实现如下：
+实现完组件间 props 的传递后，再来聊聊 state，在 react 中是通过 setState 来完成组件状态的改变的，后续章节会对这个 api（异步）深入探究，这里简单实现如下：
 
 ```js
 function Component(props) {
@@ -127,8 +127,95 @@ function Component(props) {
 Component.prototype.setState = function() {
   this.state = Object.assign({}, this.state, updateObj)
   const returnVdom = this.render() // 重新渲染
-
   document.getElementById('root').innerHTML = null
   render(returnVdom, document.getElementById('root')) // 暂时先这样处理，渲染全部
 }
 ```
+
+此时虽然已经实现了 setState 的功能，但是 `document.getElementById('root')` 节点写死在 setState 中显然不是我们希望的，我们将 dom 节点相关转移到 _render 函数中：
+
+```js
+Component.prototype.setState = function(updateObj) {
+  this.state = Object.assign({}, this.state, updateObj)
+  _render(this) // 重新渲染
+}
+```
+
+自然地，重构与之相关的 render 函数：
+
+```js
+function render(vdom, container) {
+  let component
+  if (_.isFunction(vdom.nodeName)) {
+    if (vdom.nodeName.prototype.render) {
+      component = new vdom.nodeName(vdom.attributes)
+    } else {
+      // returnVdom = vdom.nodeName(vdom.attributes) // 处理无状态组件：const A = (props) => <div>I'm {props.name}</div>
+    }
+  }
+  component ? _render(component, container) : _render(vdom, container)
+}
+```
+
+完整 _render 函数如下：
+
+```js
+function _render(component, container) {
+  const vdom = component.render ? component.render() : component
+  if (_.isString(vdom) || _.isNumber(vdom)) {
+    container.innerText = container.innerText + vdom
+    return
+  }
+  const dom = document.createElement(vdom.nodeName)
+  for (let attr in vdom.attributes) {
+    setAttribute(dom, attr, vdom.attributes[attr])
+  }
+  vdom.children.forEach(vdomChild => render(vdomChild, dom))
+  if (component.container) {  // 注意：调用 setState 方法时是进入这段逻辑，从而实现我们将 dom 的逻辑与 setState 函数分离的目标；知识点: new 出来的同一个实例
+    component.container.innerHTML = null
+    component.container.appendChild(dom)
+    return
+  }
+  component.container = container
+  container.appendChild(dom)
+}
+```
+
+让我们用下面这个用例跑下写好的 react 吧！
+
+```js
+class A extends Component {
+  constructor(props) {
+    super(props)
+    this.state = {
+      count: 1
+    }
+  }
+
+  click() {
+    this.setState({
+      count: ++this.state.count
+    })
+  }
+
+  render() {
+    return (
+      <div>
+        <button onClick={this.click.bind(this)}>Click Me!</button>
+        <div>{this.props.name}:{this.state.count}</div>
+      </div>
+    )
+  }
+}
+
+ReactDOM.render(
+  <A name="count" />,
+  document.getElementById('root')
+)
+```
+
+效果图如下：
+
+![](http://oqhtscus0.bkt.clouddn.com/reactsetstate.gif)
+
+至此，我们实现了 props 和 state 部分的逻辑。
