docs: 组件和 state|props

--- a/BasicSkill/从0到1实现React/2.组件和 state|props.md
+++ b/BasicSkill/从0到1实现React/2.组件和 state|props.md
@@ -18,7 +18,7 @@ ReactDOM.render(
 )
 ```
 
-本小节，我们接着探究组件渲染到界面的过程。在此我们引入组件的概念，`组件本质上就是一个函数`，如下代码就是一段标准组件代码：
+本小节，我们接着探究组件渲染到界面的过程。在此我们引入组件的概念，`组件本质上就是一个函数`，如下就是一段标准组件代码：
 
 ```js
 import React from 'react'
@@ -71,7 +71,7 @@ function render(vdom, container) {
 }
 ```
 
-小结：当 JSX 中是自定义组件时，经过 babel 转化后的 React.createElement 后接的第一个参数变为了函数，除此之外其它逻辑与 JSX 中是 html 元素相同。
+至此，我们完成了对组件的处理逻辑。
 
 ### props 和 state 的实现
 
@@ -125,10 +125,10 @@ function Component(props) {
 }
 
 Component.prototype.setState = function() {
-  this.state = Object.assign({}, this.state, updateObj)
+  this.state = Object.assign({}, this.state, updateObj) // 这里简单实现，后续篇章会深入探究
   const returnVdom = this.render() // 重新渲染
   document.getElementById('root').innerHTML = null
-  render(returnVdom, document.getElementById('root')) // 暂时先这样处理，渲染全部
+  render(returnVdom, document.getElementById('root'))
 }
 ```
 
@@ -150,14 +150,14 @@ function render(vdom, container) {
     if (vdom.nodeName.prototype.render) {
       component = new vdom.nodeName(vdom.attributes)
     } else {
-      // returnVdom = vdom.nodeName(vdom.attributes) // 处理无状态组件：const A = (props) => <div>I'm {props.name}</div>
+      component = vdom.nodeName(vdom.attributes) // 处理无状态组件：const A = (props) => <div>I'm {props.name}</div>
     }
   }
   component ? _render(component, container) : _render(vdom, container)
 }
 ```
 
-完整 _render 函数如下：
+在 render 函数中分离出 _render 函数的目的是为了让 setState 函数中也能调用 _render 逻辑。完整 _render 函数如下：
 
 ```js
 function _render(component, container) {
@@ -219,3 +219,13 @@ ReactDOM.render(
 ![](http://oqhtscus0.bkt.clouddn.com/reactsetstate.gif)
 
 至此，我们实现了 props 和 state 部分的逻辑。
+
+### 小结
+
+组件即函数；当 JSX 中是自定义组件时，经过 babel 转化后的 React.createElement(fn, ..) 后中的第一个参数变为了函数，除此之外其它逻辑与 JSX 中为 html 元素的时候相同；
+
+此外我们将 state/props/setState 等 api 封装进了父类 React.Component 中，从而在子类中能调用这些属性和方法。
+
+在下篇，我们会继续实现生命周期机制，如有疏漏，欢迎斧正。
+
+[项目地址](https://github.com/MuYunyun/cpreact)
