--- a/BasicSkill/从0到1实现React/2.组件和 state|props.md
+++ b/BasicSkill/从0到1实现React/2.组件和 state|props.md
@@ -20,7 +20,7 @@ ReactDOM.render(
 
 本小节，我们接着探究组件渲染到界面的过程。在此我们引入组件的概念，`组件本质上就是一个函数`，如下就是一段标准组件代码：
 
-```js
+```jsx
 import React from 'react'
 
 // 写法 1：
@@ -77,7 +77,7 @@ function render(vdom, container) {
 
 在上个小节组件 A 中，是没有引入任何属性和状态的，我们希望组件间能进行属性的传递(props)以及组件内能进行状态的记录(state)。
 
-```js
+```jsx
 import React, { Component } from 'react'
 
 class A extends Component {
