--- a/BasicSkill/从0到1实现React/3.生命周期.md
+++ b/BasicSkill/从0到1实现React/3.生命周期.md
@@ -2,7 +2,9 @@
 
 先来回顾 React 的生命周期，用流程图表示如下：
 
-该流程图比较清晰地呈现了 react 的生命周期。其分为 3 个阶段 —— 生成期，存在期，销毁期;
+![](http://oqhtscus0.bkt.clouddn.com/77e8b5ceaa1d697f280053be91a87bb3.jpg)
+
+该流程图比较清晰地呈现了 react 的生命周期。其分为 3 个阶段 —— 生成期，存在期，销毁期。
 
 因为生命周期钩子函数存在于自定义组件中，将之前 _render 函数作些调整如下：
 
@@ -12,7 +14,7 @@ function vdomToDom(vdom) {
   if (_.isFunction(vdom.nodeName)) {        // 为了更加方便地书写生命周期逻辑，将解析自定义组件逻辑和一般 html 标签的逻辑分离开
     const component = createComponent(vdom) // 构造组件
     setProps(component)                     // 更改组件 props
-    renderComponent(component)              // 渲染组件
+    renderComponent(component)              // 渲染组件，将 dom 节点赋值到 component
     return component.base                   // 返回真实 dom
   }
   ...
@@ -23,7 +25,6 @@ function vdomToDom(vdom) {
 
 ```js
 function setProps(component) {
-  // 此处加上 diff 逻辑，完美！
   if (component && component.componentWillMount) {
     component.componentWillMount()
   } else if (component.base && component.componentWillReceiveProps) {
@@ -31,8 +32,6 @@ function setProps(component) {
   }
 }
 ```
-
-此时能执行 componentWillMount 方法，但却缺少了执行 componentWillReceiveProps 的条件，因此后文会在 setProps 内补充上 diff 算法，从而顺利执行 componentWillReceiveProps。
 
 而后我们在 renderComponent 函数内加入 `componentDidMount`、`shouldComponentUpdate`、`componentWillUpdate`、`componentDidUpdate` 方法
 
@@ -69,7 +68,7 @@ function renderComponent(component) {
 
 测试如下用例：
 
-```js
+```jsx
 class A extends Component {
   componentWillReceiveProps(props) {
     console.log('componentWillReceiveProps')
@@ -150,5 +149,3 @@ componentWillUpdate
 render
 componentDidUpdate
 ```
-
-结果符合预期，接下来在后文实现 diff 的同时会将缺了的 componentWillReceiveProps 方法补上。
