docs: update plan

--- a/BasicSkill/readES6/模块.md
+++ b/BasicSkill/readES6/模块.md
@@ -1,6 +1,6 @@
 模块相关
 
-* commonjs 规范
+> commonjs 规范
 
 ```js
 // 导出
@@ -10,18 +10,18 @@ module.exports = a
 const a = require('...')
 ```
 
-* es6 规范
+> es6 模块
 
 ```js
 // 导出
-export default a
+export default a        // webpack 编译成 es5 exports.default = a
 
 // 引人
-import a from '...'
+import a from '...'     // webpack 编译成 es5 require('...').default
 
 // 导出
-export a
+export { a }            // webpack 编译成 es5 exports.a = a
 
 // 引人
-import { a } from '...'
+import { a } from '...' // webpack 编译成 es5 require('...').a
 ```
