docs: data structure — tree

--- a/BasicSkill/算法/树.md
+++ b/BasicSkill/算法/树.md
@@ -88,22 +88,92 @@ function BinarySearchTree() {
     }
   }
 
-  this.search = function(key) {
-
-  }
-
+  // 最大值：思路最右边
   this.max = function() {
-
+    let maxResult = {}
+    function getMax(node) {
+      if (node && node.right) {
+        maxResult = node.right
+        getMax(node.right)
+      }
+    }
+    getMax(root)
+    return maxResult.key
   }
 
+  // 最小值：思路最左边
   this.min = function() {
-
+    let minResult = {}
+    function getMin(node) {
+      if (node && node.left) {
+        minResult = node.left
+        getMin(node.left)
+      }
+    }
+    getMin(root)
+    return minResult.key
   }
 
-  this.remove = function(key) {
+  // 查找指定元素
+  this.search = function(key) {
+    const searchKey = function(node) {
+      if (!node) {
+        return false
+      }
+      if (key > node.key) {
+        return searchKey(node.right)
+      } else if (key < node.key) {
+        return searchKey(node.left)
+      } else {
+        return true
+      }
+    }
 
+    return searchKey(root)
   }
+
+  // 移除指定 key 值
+  // this.remove = function(key) {
+  //   let removeNode
+  //   const removeKey = function(node) {
+  //     if (key < node.key) {
+  //       removeNode = removeKey(node.left)
+  //     } else if (key > node.key) {
+  //       removeNode = removeKey(node.right)
+  //     } else {
+  //       if (node.left === null && node.right === null) { // 删除的节点下面两个分支都为空
+  //         node = null
+  //         return
+  //       }
+  //       if (node.left === null) { // 删除的节点下有一个分支
+  //         node = node.right
+  //       } else if (node.right === null) {
+  //         node = node.left
+  //       }
+
+  //     }
+  //   }
+
+  //   removeKey(root)
+  // }
 }
+
+var tree = new BinarySearchTree()
+tree.insert(11)
+tree.insert(7)
+tree.insert(15)
+tree.insert(5)
+tree.insert(3)
+tree.insert(9)
+tree.insert(8)
+tree.insert(10)
+tree.insert(13)
+tree.insert(12)
+tree.insert(14)
+tree.insert(20)
+tree.insert(18)
+tree.insert(25)
+tree.insert(6)
 ```
 
 ### 三种遍历方式的不同
@@ -121,6 +191,10 @@ function BinarySearchTree() {
 ![](http://oqhtscus0.bkt.clouddn.com/212607e3b24b52c0df959902ed8e4b1f.jpg-300)
 
 三种遍历的实现方式大同小异，可在上面代码中观察到实现的差异。
+
+### remove 的几种情况
+
+
 
 ```js
 // 测试用例
@@ -146,4 +220,10 @@ var cb = (key) => console.log(key)
 tree.inOrderTraverse(cb)   // 中序遍历: 3 5 6 7 8 9 10 11 12 13 14 15 18 20 25
 tree.preOrderTraverse(cb)  // 先序遍历：11 7 5 3 6 9 8 10 15 13 12 14 20 18 25
 tree.postOrderTraverse(cb) // 后序遍历：3 6 5 8 10 9 7 12 14 13 18 25 20 15 11
+
+tree.max() // 25
+tree.max() // 3
+
+tree.search(6) // true
+tree.search(1) // false
 ```
