docs: add data structore 图

--- a/BasicSkill/algorithm/二叉树.md
+++ b/BasicSkill/algorithm/二叉树.md
@@ -1,4 +1,4 @@
-### 树
+### 二叉树
 
 ![](http://oqhtscus0.bkt.clouddn.com/c3bc86f87907fedaeba86b0f5b96a71a.jpg-300)
 
@@ -133,29 +133,44 @@ function BinarySearchTree() {
   }
 
   // 移除指定 key 值
-  // this.remove = function(key) {
-  //   let removeNode
-  //   const removeKey = function(node) {
-  //     if (key < node.key) {
-  //       removeNode = removeKey(node.left)
-  //     } else if (key > node.key) {
-  //       removeNode = removeKey(node.right)
-  //     } else {
-  //       if (node.left === null && node.right === null) { // 删除的节点下面两个分支都为空
-  //         node = null
-  //         return
-  //       }
-  //       if (node.left === null) { // 删除的节点下有一个分支
-  //         node = node.right
-  //       } else if (node.right === null) {
-  //         node = node.left
-  //       }
+  this.remove = function(key) {
+    const removeKey = function(node, key) {
+      if (key < node.key) {         // ① 如果 key 值在传入节点的左边
+        node.left = removeKey(node.left, key)
+        return node
+      } else if (key > node.key) {  // ② 如果 key 值在传入节点的右边
+        node.right = removeKey(node.right, key)
+        return node
+      } else {                      // ③ 如果找到了 key 值
+        if (node.left === null && node.right === null) { // 删除的节点为根节点
+          node = null
+          return node
+        }
+        if (node.left === null) {                        // 删除的节点下有一个分支
+          node = node.right
+          return node
+        } else if (node.right === null) {
+          node = node.left
+          return node
+        }
+        const minNode = findMinNode(node.right)          // 删除的节点下有两个分支
+        node.key = minNode.key
+        node.right = removeKey(node.right, minNode.key)
+        return node
+      }
+    }
 
-  //     }
-  //   }
+    // 查找最小的节点
+    const findMinNode = function(node) {
+      if (node.left) {
+        return findMinNode(node.left)
+      } else {
+        return node
+      }
+    }
 
-  //   removeKey(root)
-  // }
+    removeKey(root, key)
+  }
 }
 
 var tree = new BinarySearchTree()
@@ -194,10 +209,31 @@ tree.insert(6)
 
 ### remove 的几种情况
 
+remove 方法是二叉查找树中相对复杂的实现。思路仍然是递归。
 
+如果要删除的 key 在传入节点的左侧，则递归调用 removeKey(node.left, key)；
+
+如果要删除的 key 在传入节点的右侧，则递归调用 removeKey(node.right, key)；
+
+如果要删除的 key 与传入节点相等，有如下三种情况：
+
+①：删除的节点为根节点
+
+![](http://oqhtscus0.bkt.clouddn.com/65bd1b2b99db8a342423733d0480a7b6.jpg-300)
+
+②：删除的节点下有一个分支
+
+![](http://oqhtscus0.bkt.clouddn.com/78707683d0498daa0115d445df11f83e.jpg-300)
+
+③：删除的节点下有两个分支
+
+这里的思路是找到当前节点的右分支中最小的节点，然后将该节点代替当前节点，同时移除当前节点的右分支中最小的节点
+
+![](http://oqhtscus0.bkt.clouddn.com/4107c561ed1134093333e1b16c7350f4.jpg-300)
+
+### 测试用例
 
 ```js
-// 测试用例
 var tree = new BinarySearchTree()
 tree.insert(11)
 tree.insert(7)
