docs: leetcode daily

--- a/BasicSkill/algorithm/集合.md
+++ b/BasicSkill/algorithm/集合.md
@@ -20,9 +20,8 @@ clear()
 size
 ```
 
-代码如下，仅仅用来理解，实现得不严谨。
-
 ```js
+// 代码如下，仅仅用来理解，实现得不严谨
 function Set() {
   this.items = {}
   this.size = 0
@@ -30,7 +29,7 @@ function Set() {
 
 Set.prototype.add = function(value) {
   if (!this.items[value]) {
-    this.items[value] = value
+    this.items[value] = value // 这样子不能实现存储数组、对象
     this.size = Object.keys(this.items).length
   }
 }
@@ -62,3 +61,39 @@ Set.prototype.clear = function() {
 }
 ```
 
+### 并集、交集、差集、子集
+
+业务中可能用数组多些，如果碰到 set 类型的可以用 Array.from 将之转为数组类型，再使用如下方法。
+
+```js
+// 并集
+function union(arr1, arr2) {
+  const arr = arr1.concat(arr2)
+  const result = Array.from(new Set(arr))
+  return result
+}
+
+// 交集
+function intersection(arr1, arr2) {
+  const result = arr1.filter(r => arr2.includes(r)) // 也可以转化为 set,用 has
+  return result
+}
+
+// 差集
+function difference(arr1, arr2) {
+  const result = arr1.filter(r => !arr2.includes(r))
+  return result
+}
+
+// 子集(判断 arr1 是否为 arr2 的子集)
+function isSubset(arr1, arr2) {
+  let bool = true
+  arr1.forEach(r => {
+    if (!arr2.includes(r)) {
+      bool = false
+      return
+    }
+  })
+  return bool
+}
+```
