docs: 字典和散列表

--- a/BasicSkill/algorithm/集合.md
+++ b/BasicSkill/algorithm/集合.md
@@ -2,18 +2,18 @@
 
 集合是一种无重复元素，无顺序的数据结构。
 
-JavaScript ES6 引入的 Set 数据结构类型就是集合。
+ES6 引入的 Set 就是集合的数据结构类型。
 
-### 动手实现 Set
+### 简易版 Set 实现
 
-仿照 Set, 来实现一个简易版的 Set，它拥有的 api 如下：
+我们来动手实现一个简易版的 Set，它拥有的 api 如下：
 
-```
+```js
 add(value)
 
-has(value)
-
 delete(value)
+
+has(value)
 
 clear()
 
