docs: 哈希表——链表法

--- a/BasicSkill/algorithm/链表.md
+++ b/BasicSkill/algorithm/链表.md
@@ -103,7 +103,7 @@ var LinkedList = function() {
 
   // 获取最开头的链表
   this.getHead = function() {
-    return head.element
+    return head
   }
 
   // 是否为空
