docs: 哈希表 —— 线性探查法

--- a/BasicSkill/algorithm/哈希表.md
+++ b/BasicSkill/algorithm/哈希表.md
@@ -1,78 +1,3 @@
-### 字典
-
-类似于集合，字典也是一种无重复元素，无顺序的数据结构。
-
-区别在于在集合中，我们以 [值， 值] 的形式存储；在字典中，我们以 [键，值] 的形式存储；集合的知识点可以阅读 [集合](https://github.com/MuYunyun/blog/blob/master/BasicSkill/algorithm/集合.md)
-
-ES6 引入的 Map 就是字典的数据类型。
-
-#### 简易版 Map 实现
-
-我们来动手实现一个简易版的 Map，它拥有的 api 如下：
-
-```js
-set(key, value)
-
-delete(key)
-
-get(key)
-
-has(key)
-
-clear()
-
-values()
-
-size
-```
-
-```js
-function Map() {
-  this.items = {}
-  this.size = 0
-}
-
-Map.prototype.has = function(key) {
-  for (let i in this.items) {
-    if (this.items.hasOwnProperty(i)) {
-      return true
-    }
-  }
-  return false
-}
-
-Map.prototype.delete = function(key) {
-  if (this.has(key)) {
-    delete(this.items[key])
-    this.size--
-    return true
-  }
-  return false
-}
-
-Map.prototype.set = function(key, value) {
-  this.items[key] = value // 这里是不严谨的实现
-  this.size++
-}
-
-Map.prototype.get = function(key) {
-  return this.items[key]
-}
-
-Map.prototype.clear = function() {
-  this.items = {}
-  this.size = 0
-}
-
-Map.prototype.values = function() {
-  const arr = []
-  Object.keys(this.items).forEach(r => {
-    arr.push(this.items[r])
-  })
-  return arr
-}
-```
-
 ### 哈希表
 
 哈希表算是一种特殊的字典。它在实际的键值和存入的哈希值之间存在一层映射。如下例子：
@@ -110,7 +35,7 @@ HashTable.prototype.remove = function(key) {
 }
 ```
 
-测试一下
+跑如下测试用例：
 
 ```js
 var test = new HashTable()
@@ -136,7 +61,7 @@ test.put('ba', 'ba@gmail.com') // ab 和 ba 的哈希值相同，后者会把前
 
 顾名思义，这个方法就是在每个哈希值上引人链表。如下图所示：
 
-![](http://oqhtscus0.bkt.clouddn.com/8f944bba4c158e6c212f81ad941f263e.jpg-200)
+![](http://oqhtscus0.bkt.clouddn.com/bd07ad706f4d494a9df8fb63621a6036.jpg-200)
 
 对之前 put、get、remove 方法做如下修改，其中使用到的链表的代码参考之前的 [链表](https://github.com/MuYunyun/blog/blob/master/BasicSkill/algorithm/链表.md#链表的实现)
 
@@ -166,7 +91,19 @@ HashTable.prototype.put = function(key, value) {
   if (!this.items[hash]) {
     this.items[hash] = new LinkedList() // 这里将之前实现的链表拿来使用
   }
-  this.items[hash].append(new Node(key, value))
+  let linkList = this.items[hash].getHead()
+  let ifAppend = true
+  while (linkList) {                        // 以下为 append 逻辑
+    if (linkList.element.key === key) {     // key 值重复逻辑
+      linkList.element = new Node(key, value)
+      ifAppend = false
+      break
+    }
+    linkList = linkList.next
+  }
+  if (ifAppend) {
+    this.items[hash].append(new Node(key, value))
+  }
 }
 
 HashTable.prototype.has = function (hash) {
@@ -214,7 +151,8 @@ HashTable.prototype.remove = function(key) {
 ```js
 var test = new HashTable()
 test.put('ab', 'ab@gmail.com')
-test.put('ba', 'ba@gmail.com')
+test.put('ba', 'ba~@gmail.com')
+test.put('ba', 'ba@gmail.com') // 验证重复字段
 test.put('cd', 'cd@gmail.com')
 
 test.get('ab') // ab@gmail.com
@@ -224,3 +162,108 @@ test.get('cd') // cd@gmail.com
 test.remove('ba')
 test.get('ba') // undefined
 ```
+
+#### 线性探查法
+
+思想：如果当前所要存储的 hash 值已存在于存储空间，则判断存储空间里是否已存储 hash + 1，若无则存储 hash + 1，若有则判断存储空间里是否已存储 hash + 2，依次类推。参考图如下：
+
+![](http://oqhtscus0.bkt.clouddn.com/9212ee6899520f888f774ca7a2dc0519.jpg-200)
+
+接着进入代码实现环节，同样是修改 put、get、remove 方法：
+
+```js
+function HashTable() {
+  this.items = {}
+}
+
+// 哈希算法
+function keyToHash(key) {
+  let hash = 0
+  for (let i = 0; i < key.length; i++) {
+    hash += key.charCodeAt(i)
+  }
+  hash = hash % 37 // 为了避免 hash 的值过大
+  return hash
+}
+
+// 后面会用之锁定
+function Node(key, value) {
+  this.key = key
+  this.value = value
+}
+
+HashTable.prototype.put = function(key, value) {
+  let hash = keyToHash(key)
+  while (this.items[hash]) {             // 当 this.items[index] 不存在时终止
+    if (this.items[hash].key === key) {  // 对已存在的 key 值进行覆盖
+      break
+    }
+    hash++
+  }
+  this.items[hash] = new Node(key, value)
+}
+
+HashTable.prototype.has = function(hash) {
+  if (this.items.hasOwnProperty(hash)) {
+    return true
+  }
+  return false
+}
+
+HashTable.prototype.get = function(key) {
+  let hash = keyToHash(key)
+  if (this.items[hash]) {
+    while (this.items[hash].key !== key) { // 找到存储的 index
+      hash++
+    }
+    return this.items[hash].value
+  }
+  return undefined
+}
+
+HashTable.prototype.remove = function(key) {
+  let hash = keyToHash(key)
+  if (this.has(hash)) {
+    while (this.items[hash].key !== key) { // 找到存储的 index
+      hash++
+    }
+    this.items[hash] = undefined
+    return true
+  }
+  return false
+}
+```
+
+接着跑如下测试用例：
+
+```js
+var test = new HashTable()
+test.put('ab', 'ab@gmail.com')
+test.put('ba', 'ba@gmail.com')
+test.put('ab', 'ab@gmail.com')
+
+test.get('ab') // 'ab@gmail.com'
+
+test.remove('ab')
+test.get('ab') // undefined
+```
+
+#### 更好的哈希函数
+
+另外在本文实现的哈希函数中，性能不是特别好（因为容易产生相同的哈希值），给出一段更好的散列函数的实现，数学知识的原理暂时不深究了
+
+```js
+// 哈希算法
+function keyToHash(key) {
+  let hash = 5381    // 取一个素数
+  for (let i = 0; i < key.length; i++) {
+    hash = hash * 33 + key.charCodeAt(i)
+  }
+  hash = hash % 1013 // 除以另外一个素数
+  return hash
+}
+```
+
+#### 哈希表的应用
+
+笔者认为业务中，哈希表的数据结构能应用需要加密处理的数据存储中。
