docs: data structure -- graph

--- a/BasicSkill/algorithm/图.md
+++ b/BasicSkill/algorithm/图.md
@@ -86,17 +86,13 @@ H -> D
 I -> E
 ```
 
-### 图的遍历
-
-~~后文总结两种遍历~~
-
-#### 广度优先遍历(BFS)
+### 广度优先遍历(BFS)
 
 顾名思义，广度优先即横向优先，示意图如下：
 
 ![](http://oqhtscus0.bkt.clouddn.com/4547193af1645f33359e875559092c6b.jpg-200)
 
-核心要点：先入队列的先遍历。思路如下：(标白：未发现；标灰：已找寻；))
+思想：用到了队列的思想。思路如下：(标白：未发现；标灰：已找寻；))
 
 * 创建队列 u，将标灰的顶点插入队列
 
@@ -179,3 +175,137 @@ graph.bfs('A', (shiftQueue) => {
 ```
 
 打印结果为 A B C D E F G H I，符合预期。
+
+#### 广度优先遍历求最短路径
+
+在上述 bfs 函数实现的基础上，加入两个变量分别存储距离以及最短路径上先前的点
+
+```js
+Graph.prototype.BFS = function(v) {
+  const obj = {}
+
+  const d = {}    // 新加入的变量存储距离
+  const prev = {} // 新加入的变量存储最短路径上先前的点
+
+  for (let i of this.topPointArr) { // 初始化颜色
+    obj[i] = 'white'
+    d[i] = 0
+    prev[i] = null
+  }
+
+  const queue = new Queue()
+  obj[v] = 'gray'
+
+  queue.push(v)
+
+  let shiftQueue, neighbour
+
+  while (!queue.isEmpty()) {
+    shiftQueue = queue.shift()
+    neighbour = this.edgeMap.get(shiftQueue)
+
+    for (let i of neighbour) {
+      if (obj[i] === 'white') {
+        obj[i] = 'gray'
+        queue.push(i)
+        d[i] = d[shiftQueue] + 1  // 这个地方卡主了~~~，思路：第二行的点距离第一行的点相差为 1，第三行的点距离第二行的点相差为 1，以此类推。
+        prev[i] = shiftQueue
+      }
+    }
+  }
+
+  return {
+    distance: d,
+    prev: prev
+  }
+}
+```
+
+调用 `graph.BFS('A')`，得如下结果：
+
+```js
+{
+  distance: { A: 0, B: 1, C: 1, D: 1, E: 2, F: 2, G: 2, H: 2, I: 3 }
+  prev: { A: null, B: "A", C: "A", D: "A", E: "B", F: "B", G: "C", H: "D", I: "E" }
+}
+```
+
+接下来我们处理上述返回的 prev 将最短路径打印出来：
+
+```js
+Graph.prototype.logMinPath = function(v) {
+  const { distance, prev } = this.BFS(v)
+  let path = ''
+  const arr = []
+  Object.keys(distance).map(r => {
+    path = r
+    while (prev[r]) { // 终止条件为 prev 中值为 null 时
+      path = prev[r] + ' - ' + path
+      r = prev[r]
+    }
+    arr.push(path)
+  })
+  return arr.join('\n')
+}
+```
+
+调用 `graph.logMinPath('A')`，打印结果如下：
+
+```
+A
+A - B
+A - C
+A - D
+A - B - E
+A - B - F
+A - C - G
+A - D - H
+A - B - E - I
+```
+
+### 深度优先遍历(DFS)
+
+深度优先遍历用到了栈的思想。示意图如下：
+
+![](http://oqhtscus0.bkt.clouddn.com/b4fa9641c9f086cf2702f868b283dbee.jpg-200)
+
+代码实现如下：
+
+```js
+Graph.prototype.dfs = function (v, callback) {
+  const obj = {}
+
+  for (let i of this.topPointArr) { // 初始化颜色
+    obj[i] = 'white'
+  }
+
+  let neighbour
+  const that = this
+  const find = function (v, color, cb) {
+    color[v] = 'gred'
+    if (cb) {
+      cb(v)
+    }
+    neighbour = that.edgeMap.get(v)
+    for (let i of neighbour) {
+      if (color[i] === 'white') {
+        find(i, color, cb)
+      }
+    }
+  }
+
+  find(v, obj, callback)
+}
+```
+
+进行如下函数调用
+
+```js
+graph.dfs('A', (shiftQueue) => {
+  console.log(shiftQueue)  // 打印结果：A B E I F C D G H
+})
+```
+
+#### 深度优先遍历的应用
+
+深度优先遍历可以用在拓扑排序(需要按照一定顺序完成任务)中，这里就不展开了。
